# ttk

./: .gitignore  CMakeLists.txt
core/base/persistenceSimplification/: CMakeLists.txt  PersistenceSimplification.cpp  PersistenceSimplification.h
core/base/pointDistField/: CMakeLists.txt  PointDistField.cpp  PointDistField.h
core/base/scalarFieldFromPointCloud/: CMakeLists.txt  ScalarFieldFromPointCloud.cpp  ScalarFieldFromPointCloud.h
core/vtk/ttkPersistenceSimplification/: CMakeLists.txt  ttkPersistenceSimplification.cpp  ttkPersistenceSimplification.h
core/vtk/ttkScalarFieldFromPointCloud/: CMakeLists.txt  ttkScalarFieldFromPointCloud.cpp  ttkScalarFieldFromPointCloud.h
core/vtk/ttkTopologicalSimplification/: ttkTopologicalSimplification.cpp
core/vtk/ttkptcloudtest/: CMakeLists.txt  ttkptcloudtest.cpp  ttkptcloudtest.h
paraview/PersistenceSimplification/: CMakeLists.txt  PersistenceSimplification.xml
paraview/ScalarFieldFromPointCloud/: CMakeLists.txt  ScalarFieldFromPointCloud.xml
paraview/TopologicalSimplification/: TopologicalSimplification.xml
paraview/ptcloudtest/: CMakeLists.txt  ptcloudtest.xml
standalone/PersistenceSimplification/cmd/: CMakeLists.txt  main.cpp
standalone/PersistenceSimplification/gui/: CMakeLists.txt  main.cpp
state_files/: README.md  datasets.py  fcpsclusters_done.pvsm  finland_done.pvsm  scikitlearn_done.pvsm
